backend connected with mongodb atlas

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/book_marketplace_db
+MONGODB_URI=mongodb+srv://mandy:mandybook123@book-marketplcae-db.wnudr1e.mongodb.net/?retryWrites=true&w=majority&appName=book-marketplcae-db
 JWT_ACCESS_SECRET=something-went-wrong
 JWT_REFRESH_SECRET=something-went-wrong
 ESEWA_CALLBACK_URL=http://example.com/api/books/handle-esewa-callback
